Release Note

* current
  * fixed event-picking for rucio
  * fixed DDM for unicode
  * introduced timeout for starting
  * added increaseAttemptNr
  * fixed checkRucioDataset
  * fixed method emulator in DDM
  * changed to work with rucio containers 
  * cleanup to work without specialHandling=ddm:rucio
  * added protection against empty RSE Expression
  * using nevents=null for log files
  * ReplicaNotFound as a fatal error
  * using rucio when backEnd is None
  * added protection to AdderAtlas for uncatchable exceptions
  * fixed getJob for input log files of ES merge
  * moved analysis tape rebro from copyArchive to runRebro
  * considering high prio before mcore in the brokerage
  * forcing ddmBackEnd=rucio for anal tasks
  * changed for maxAttemptES
  * enabled ES merging
  * using force_backend=dq2 when backend is unspecified
  * fixed for pauseTask and resumeTask
  * fixed updateUnmergedDatasets to count nFiles in Contents
  * fixed AdderAtlas to take groupdisk into into account for registerFiles
  * added pauseTask and resumeTask
  * making GEN dis when input is in DQ2 even if ddm:rucio
  * updating nEvents when updateEventRange
  * reset jobSubStatus and jobMetrics in retried ES jobs
  * disabled updating nFilesOnHold in updateJob by transferring pmerge
  * using new eventlookup client
  * check sub to reduce nFilesOnHold when merging is killed
  * added protection to updateUmergeDataset to avoid concurrent update
  * disabled updating nFilesOnHold by transferring for trn_*
  * fixed Closer to update dataset status after unmerge datasets are updated
  * removed priority reduction for ES retry
  * changed datasetManager to kick stalled merging jobs
  * fixed killUnusedEventServiceConsumers not to kill running consumers
  * added toreassign to the list of active task status
  * added --prodSourceLabel to killTask
  * fixed fileCallbackListener to use TSL instead of sslv3
  * extracting LB Nr
  * changed panda.py to measure execution time for each call